--- a/basic/index.html
+++ b/basic/index.html
@@ -11,7 +11,7 @@
 <body class="dark:bg-slate-900">
     <div class="w-3/4 m-auto">
         <nav class="bg-black text-white py-5 px-16 flex justify-between darkMode relative">
-            <div class="flex flex-col items-center lg:flex-row">
+            <div class="flex flex-col items-center w-[98%] lg:flex-row">
                 <img src="./assets/linux.png" alt="Logo" class="h-12 mb-1 rounded-full border-2 border-white md:w-38">
                 <ul class="flex flex-col items-center space-x-0 justify-end lg:flex-row lg:space-x-3 lg:right-0 md:flex-col md:space-x-0 md:items-center lg:absolute">
                     <li class="cursor-pointer py-1">Home</li>
@@ -30,7 +30,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="absolute top-2 right-12 lg:hidden xl:hidden">
+            <div class="absolute top-2 right-12 w-[2%] lg:hidden xl:hidden">
                 <i class="fa fa-bars"></i>
             </div>
         </nav>
