responsive web design

--- a/basic/index.html
+++ b/basic/index.html
@@ -11,9 +11,9 @@
 <body class="dark:bg-slate-900">
     <div class="w-3/4 m-auto">
         <nav class="bg-black text-white py-5 px-16 flex justify-between darkMode relative">
-            <div class="nav flex flex-col items-center w-[98%] lg:flex-row">
+            <div class="nav flex flex-col hidden items-center w-[98%] lg:flex lg:flex-row">
                 <img src="./assets/linux.png" alt="Logo" class="h-12 mb-1 rounded-full border-2 border-white md:w-38">
-                <ul class="flex flex-col items-center space-x-0 justify-end lg:flex-row lg:space-x-3 lg:right-0 md:flex-col md:space-x-0 md:items-center lg:absolute">
+                <ul class="flex flex-col items-center space-x-0 justify-end lg:flex-row lg:space-x-3 lg:right-10 md:flex-col md:space-x-0 md:items-center lg:absolute">
                     <li class="cursor-pointer py-1">Home</li>
                     <li class="cursor-pointer py-1">About</li>
                     <li class="cursor-pointer py-1">Contact</li>
