basic tailwind page completed

--- a/basic/index.html
+++ b/basic/index.html
@@ -13,7 +13,7 @@
         <nav class="bg-black text-white py-5 px-16 flex justify-between darkMode relative">
             <div class="nav flex flex-col hidden items-center w-[98%] lg:flex lg:flex-row">
                 <img src="./assets/linux.png" alt="Logo" class="h-12 mb-1 rounded-full border-2 border-white md:w-38">
-                <ul class="flex flex-col items-center space-x-0 justify-end lg:flex-row lg:space-x-3 lg:right-10 md:flex-col md:space-x-0 md:items-center lg:absolute">
+                <ul class="responsive-Ul">
                     <li class="cursor-pointer py-1">Home</li>
                     <li class="cursor-pointer py-1">About</li>
                     <li class="cursor-pointer py-1">Contact</li>
@@ -30,7 +30,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="hamburger absolute top-2 right-12 w-[2%] lg:hidden xl:hidden">
+            <div class="hamburger absolute top-2 right-12 w-[2%] cursor-pointer lg:hidden xl:hidden">
                 <i class="fa fa-bars"></i>
             </div>
         </nav>
