transition added for dark-mode

--- a/basic/index.html
+++ b/basic/index.html
@@ -8,9 +8,9 @@
     <script src="https://kit.fontawesome.com/59485d1319.js" crossorigin="anonymous"></script>
     <title>Tailwind CSS</title>
 </head>
-<body class="dark:bg-slate-900">
+<body class="dark:bg-slate-900 transition-all duration-700">
     <div class="w-3/4 m-auto">
-        <nav class="bg-black text-white py-5 px-16 flex justify-between darkMode relative">
+        <nav class="bg-black text-white py-5 px-16 flex justify-between darkMode transition-all duration-700 relative">
             <div class="nav flex flex-col hidden items-center w-[98%] lg:flex lg:flex-row">
                 <img src="./assets/linux.png" alt="Logo" class="h-12 mb-1 rounded-full border-2 border-white md:w-38">
                 <ul class="responsive-Ul">
@@ -34,7 +34,7 @@
                 <i class="fa fa-bars"></i>
             </div>
         </nav>
-        <main class="bg-gray-300 mt-5 px-10 py-5 darkMode">
+        <main class="bg-gray-300 mt-5 px-10 py-5 darkMode transition-all duration-700">
             <div class="text-3xl text-center">
                 Tailwind CSS
             </div>
@@ -82,7 +82,7 @@
                 </button>
             </div>
         </main>
-        <div class="bg-gray-500 py-5 my-5 darkMode">
+        <div class="bg-gray-500 py-5 my-5 darkMode transition-all duration-700">
             <div class="text-3xl text-center mb-5 underline">
                 Contact Form
             </div>
