--- a/basic/index.html
+++ b/basic/index.html
@@ -19,8 +19,7 @@
                     <li class="cursor-pointer py-1">Contact</li>
                     <li class="cursor-pointer py-1">License</li>
                     <li class="cursor-pointer py-1">Author</li>
-                    <li class="cursor-pointer spy-1">
-                        Theme
+                    <li class="cursor-pointer py-1" id="text">
                         <span class="sun hidden">
                             <i class="fa fa-sun-o"></i>
                         </span>
